Fixed Games Service Test